Game Skeleton & Styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tic Tac Toe</title>
         <link rel = "stylesheet" href = "style.css">
-        
+
 
     </head>
 
@@ -17,5 +17,31 @@
                 <li>TicTacToe.com</li>
             </ul>
         </nav>
+
+        <div class="gameContainer">
+            <div class="container">
+                <div class="box bt-0 bl-0"><span class="boxtext">X</span></div>
+                <div class="box bt-0"><span class="boxtext">X</span></div>
+                <div class="box br-0 bt-0"><span class="boxtext">X</span></div>
+                <div class="box bl-0"><span class="boxtext">X</span></div>
+                <div class="box"><span class="boxtext">X</span></div>
+                <div class="box br-0"><span class="boxtext">X</span></div>
+                <div class="box bl-0 bd-0"><span class="boxtext">X</span></div>
+                <div class="box bd-0"><span class="boxtext">X</span></div>
+                <div class="box br-0 bd-0"><span class="boxtext">X</span></div>
+            </div>
+
+            <div class="gameInfo">
+                <h1>Welcome to Tic Tac Toe</h1>
+                <div>
+                    <span class = "info">Turn for X</span>
+                    <button id= "reset">Reset</button>
+                </div>
+                <div class="imagebox">
+                    <img src="assets/excited.gif" alt="Great Work">
+                </div>
+            </div>
+        </div>
+        <script src="script.js"></script>
     </body>
 </html>
