--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
         <div class="gameContainer">
             <div class="container">
-                <div class="box bt-0 bl-0"><span class="boxtext">X</span></div>
-                <div class="box bt-0"><span class="boxtext">X</span></div>
-                <div class="box br-0 bt-0"><span class="boxtext">X</span></div>
-                <div class="box bl-0"><span class="boxtext">X</span></div>
-                <div class="box"><span class="boxtext">X</span></div>
-                <div class="box br-0"><span class="boxtext">X</span></div>
-                <div class="box bl-0 bd-0"><span class="boxtext">X</span></div>
-                <div class="box bd-0"><span class="boxtext">X</span></div>
-                <div class="box br-0 bd-0"><span class="boxtext">X</span></div>
+                <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
+                <div class="box bt-0"><span class="boxtext"></span></div>
+                <div class="box br-0 bt-0"><span class="boxtext"></span></div>
+                <div class="box bl-0"><span class="boxtext"></span></div>
+                <div class="box"><span class="boxtext"></span></div>
+                <div class="box br-0"><span class="boxtext"></span></div>
+                <div class="box bl-0 bd-0"><span class="boxtext"></span></div>
+                <div class="box bd-0"><span class="boxtext"></span></div>
+                <div class="box br-0 bd-0"><span class="boxtext"></span></div>
             </div>
 
             <div class="gameInfo">
@@ -37,7 +37,7 @@
                     <span class = "info">Turn for X</span>
                     <button id= "reset">Reset</button>
                 </div>
-                <div class="imagebox">
+                <div class="imgbox">
                     <img src="assets/excited.gif" alt="Great Work">
                 </div>
             </div>
