Credits and Copyrights

--- a/index.html
+++ b/index.html
@@ -43,5 +43,11 @@
             </div>
         </div>
         <script src="script.js"></script>
+        <div class="copyrights">
+            <strong>© 2022 by Multiprocessing Muggles</strong>
+        </div>
+        <div class="developers">
+            <em>Dveloped By Sunami Dasgupta, Soham Das.</em>
+        </div>
     </body>
 </html>
