Issue Solved - Webpage is not responsive enough

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 <h1>Welcome to Tic Tac Toe</h1>
                 <div>
                     <span class = "info">Turn for X</span>
+                </div>
+                <div>
                     <button id= "reset">Reset</button>
                 </div>
                 <div class="imgbox">
